k8s-manifests/apps/task-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api
  labels:
    app: task-api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: task-api
