k8s-manifests/apps/task-api/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: task-api
  labels:
    app: task-api
spec:
  to:
    kind: Service
    name: task-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
